# sampling-snippets-for-raytracing

./: CMakeLists.txt  README.md  constant.h  sampling.h  vec.h
python/: binding.cpp
